--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>연파란 채팅 앱</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root {
       --main-bg: #91cce7;
@@ -24,6 +25,7 @@
       height: 100vh;
       background-color: var(--main-bg);
       color: var(--text-color);
+      overflow: hidden;
     }
 
     #sidebar {
@@ -31,6 +33,12 @@
       background-color: var(--sidebar-bg);
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      overflow-y: auto;
+      z-index: 1;
     }
 
     #sidebar h2 {
@@ -54,10 +62,12 @@
     }
 
     #chat-area {
+      margin-left: 200px;
       flex: 1;
       display: flex;
       flex-direction: column;
       background-color: var(--main-bg);
+      height: 100vh;
     }
 
     #messages {
@@ -80,32 +90,52 @@
       display: flex;
       padding: 10px;
       background-color: var(--input-bg);
-      position: sticky;
-      bottom: 0;
     }
 
     #input {
       flex: 1;
-      padding: 10px;
+      padding: 14px;
       border: 1px solid #aaccee;
       border-radius: 5px;
-      font-size: 1em;
+      font-size: 1.1em;
       background-color: white;
       color: var(--text-color);
     }
 
     #send {
       margin-left: 10px;
-      padding: 10px 20px;
+      padding: 14px 24px;
       background-color: var(--button-bg);
       border: none;
       border-radius: 5px;
       color: white;
+      font-size: 1.1em;
       cursor: pointer;
     }
 
     #send:hover {
       background-color: var(--button-hover);
+    }
+
+    /* 모바일 반응형 */
+    @media (max-width: 600px) {
+      #sidebar {
+        display: none;
+      }
+
+      #chat-area {
+        margin-left: 0;
+      }
+
+      #input {
+        padding: 16px;
+        font-size: 1.2em;
+      }
+
+      #send {
+        padding: 16px 20px;
+        font-size: 1.2em;
+      }
     }
   </style>
 </head>
@@ -170,7 +200,6 @@
       });
     });
 
-    // 초기 메시지 표시
     renderMessages();
   </script>
 </body>
