--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>연파란 채팅 앱</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     :root {
       --main-bg: #91cce7;
@@ -17,10 +16,6 @@
       --name-color: #3366cc;
     }
 
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
       padding: 0;
@@ -29,7 +24,6 @@
       height: 100vh;
       background-color: var(--main-bg);
       color: var(--text-color);
-      flex-direction: column;
     }
 
     #sidebar {
@@ -37,12 +31,6 @@
       background-color: var(--sidebar-bg);
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-      position: fixed;
-      left: 0;
-      top: 0;
-      bottom: 0;
-      overflow-y: auto;
-      z-index: 10;
     }
 
     #sidebar h2 {
@@ -67,10 +55,9 @@
 
     #chat-area {
       flex: 1;
-      margin-left: 200px;
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      background-color: var(--main-bg);
     }
 
     #messages {
@@ -78,7 +65,6 @@
       overflow-y: auto;
       padding: 20px;
       background-color: var(--message-bg);
-      transition: max-height 0.2s ease;
     }
 
     .message {
@@ -96,100 +82,34 @@
       background-color: var(--input-bg);
       position: sticky;
       bottom: 0;
-      z-index: 5;
     }
 
     #input {
       flex: 1;
-      padding: 14px;
+      padding: 10px;
       border: 1px solid #aaccee;
       border-radius: 5px;
-      font-size: 1.1em;
+      font-size: 1em;
       background-color: white;
       color: var(--text-color);
     }
 
     #send {
       margin-left: 10px;
-      padding: 14px 24px;
+      padding: 10px 20px;
       background-color: var(--button-bg);
       border: none;
       border-radius: 5px;
       color: white;
-      font-size: 1.1em;
       cursor: pointer;
     }
 
     #send:hover {
       background-color: var(--button-hover);
     }
-
-    /* 모바일 반응형 */
-    @media (max-width: 600px) {
-      body {
-        flex-direction: column;
-      }
-
-      #sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-        display: none;
-        padding: 10px;
-      }
-
-      #sidebar.show {
-        display: block;
-      }
-
-      #chat-area {
-        margin-left: 0;
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-      }
-
-      #input-container {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
-
-      #input {
-        padding: 16px;
-        font-size: 1.2em;
-      }
-
-      #send {
-        padding: 16px 20px;
-        font-size: 1.2em;
-      }
-
-      #toggle-sidebar {
-        display: block;
-        background-color: var(--sidebar-bg);
-        color: var(--text-color);
-        padding: 10px;
-        text-align: left;
-        font-size: 1.2em;
-        border: none;
-        width: 100%;
-        cursor: pointer;
-      }
-    }
-
-    /* PC에서 토글버튼 숨김 */
-    #toggle-sidebar {
-      display: none;
-    }
   </style>
 </head>
 <body>
-
-  <!-- 모바일용 토글 버튼 -->
-  <button id="toggle-sidebar">&gt; 학교 목록</button>
-
   <div id="sidebar">
     <h2>학교 목록</h2>
     <div class="school">철산중</div>
@@ -210,10 +130,8 @@
     const send = document.getElementById('send');
     const messages = document.getElementById('messages');
     const schools = document.querySelectorAll('.school');
-    const sidebar = document.getElementById('sidebar');
-    const toggleSidebar = document.getElementById('toggle-sidebar');
 
-    let currentRoom = '철산중';
+    let currentRoom = '철산중'; // 기본 채팅방
     const roomMessages = {
       '철산중': [],
       '광명중': [],
@@ -249,29 +167,11 @@
       el.addEventListener('click', () => {
         currentRoom = el.textContent.trim();
         renderMessages();
-        if (window.innerWidth <= 600) {
-          sidebar.classList.remove('show');
-        }
       });
     });
 
-    toggleSidebar.addEventListener('click', () => {
-      sidebar.classList.toggle('show');
-    });
-
-    // 채팅 입력 시 메시지 영역 축소/복귀
-    input.addEventListener('focus', () => {
-      messages.style.maxHeight = '50vh';
-      messages.scrollTop = messages.scrollHeight;
-    });
-
-    input.addEventListener('blur', () => {
-      messages.style.maxHeight = '';
-      messages.scrollTop = messages.scrollHeight;
-    });
-
+    // 초기 메시지 표시
     renderMessages();
   </script>
-
 </body>
 </html>
